<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>magma</groupId>
    <artifactId>state-space-graph</artifactId>
    <version>1.0</version>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>run.Main</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <finalName>state-space-graph</finalName> <!-- generated jar file name -->
                    <appendAssemblyId>false</appendAssemblyId> <!-- removes the jar-with-dependencies suffix -->
                </configuration>
            </plugin>
        </plugins>
    </build>

    <properties>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <!-- Add dependencies from github repositories -->
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <!-- https://github.com/acm-ribeiro/tla-state-parser -->
    <dependencies>
        <dependency>
            <groupId>com.github.acm-ribeiro</groupId>
            <artifactId>tla-state-parser</artifactId>
            <version>2c77cbfd0d</version>
        </dependency>
    </dependencies>

</project>